Fixing uneven border on Menu Button Highlight and some a:hover underlines
Former-commit-id: 81fa481c880742a6af983e919efc9ce4139f36b0
Former-commit-id: 75d9be5c652fa70fc8943d45841781951dd93431

--- a/sass/base/_btn.scss
+++ b/sass/base/_btn.scss
@@ -125,6 +125,7 @@ Styleguide buttons
     &:active,
     &:focus {
       outline: 5px solid $yellow-light;
+      outline-offset: -5px;
     }
 
     &:focus {
